--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jswz72/voting-app#readme",
   "dependencies": {
+    "bulma": "^0.5.1",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "vue-router": "^2.7.0"
