--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node server.js",
+    "start": "webpack-dev-server --open --hot --inline",
     "build": "webpack"
   },
   "repository": {
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/jswz72/voting-app#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
     "bulma": "^0.5.1",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
+    "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "css-loader": "^0.28.5",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   }
 }
