--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --hot --inline",
     "dev": "npm run build && node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint ./app --ext .js --ext .vue"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,9 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.5",
+    "eslint": "^4.10.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^2.1.0",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.5.5",
