--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^0.28.5",
     "eslint": "^4.10.0",
     "eslint-config-vue": "^2.0.2",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-vue": "^2.1.0",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
