--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "bulma": "^0.5.1",
+    "chart.js": "^2.7.1",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "vue": "^2.4.2",
