--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "homepage": "https://github.com/jswz72/voting-app#readme",
   "dependencies": {
+    "axios": "^0.17.0",
     "babel-core": "^6.26.0",
     "bulma": "^0.5.1",
     "chart.js": "^2.7.1",
     "express": "^4.15.3",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "mongodb": "^2.2.30",
+    "url-loader": "^0.6.2",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
@@ -36,6 +40,7 @@
     "eslint": "^4.10.0",
     "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^2.1.0",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
