--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "bulma": "^0.5.1",
     "chart.js": "^2.7.1",
     "express": "^4.15.3",
+    "express-session": "^1.15.6",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "mongodb": "^2.2.30",
+    "mongoose": "^4.13.4",
     "url-loader": "^0.6.2",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
