--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --hot --inline --port 3000",
-    "dev": "node ./app/Server/server.js",
+    "dev": "webpack-dev-server --open --hot --inline --port 3000",
+    "start": "node ./app/Server/server.js",
     "build": "webpack",
     "lint": "eslint ./app --ext .js --ext .vue"
   },
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "bulma": "^0.5.1",
     "chart.js": "^2.7.1",
+    "connect-mongo": "^2.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
     "file-loader": "^1.1.5",
